cmake_minimum_required(VERSION 3.9.0)
project(LAST  VERSION 0.1)

set(CMAKE_CXX_STANDARD 14)
message(STATUS "We using C++14 to compile the LAST")

set(SERVER_NAME $ENV{SERVER_NAME})
if (NOT SERVER_NAME)
	message(STATUS "NO SERVER_NAME is set, use the default: IHEP")
	message(STATUS "Default library path is in")
	set(SERVER_NAME "IHEP")
else()
	message(STATUS "SERVER_NAME is ${SERVER_NAME}")
endif()
if (SERVER_NAME STREQUAL "USTC")
	list(APPEND CMAKE_PREFIX_PATH $ENV{MY_LIB_PATH})
endif()
if (SERVER_NAME STREQUAL "IHEP")
	list(APPEND CMAKE_PREFIX_PATH $ENV{LAST_LIB_PATH})
endif()
message(STATUS "Now CMAKE PATH is ${CMAKE_PREFIX_PATH}")
set(GFLAGS_USE_TARGET_NAMESPACE ON)
find_package(glog REQUIRED)
find_package(XRootD REQUIRED CONPONENTS CLIENT SERVER)
find_package(nlohmann_json REQUIRED)
find_package(gflags REQUIRED)
find_package(ROOT CONFIG REQUIRED)

add_subdirectory(LASTIO)
add_subdirectory(LASTCore)
add_subdirectory(test)

#add_executable(test)
#target_compile_options(test PRIVATE -Wall -O0 -g -Debug)
#target_compile_options(test PRIVATE -Wall -O3)
#target_sources(test PRIVATE LASTIO/EventIO_File.cpp LASTIO/SimTel_File.cpp  LASTIO/Konrad_hessio/fileopen.c LASTIO/Konrad_hessio/straux.c TMP/LACTTree.cpp TMP/Convert.cpp ${ROOT_USE_FILE} TMP/lact_convert.cpp)

#target_include_directories(test PRIVATE LASTIO/ ${XROOTD_INCLUDE_DIRS} LASTIO/Konrad_hessio TMP/ ${ROOT_INCLUDE_DIRS})
#message(STATUS "XROOTD ${XROOTD_CLIENT_LIBRARIES}")
#target_link_libraries(test PRIVATE nlohmann_json::nlohmann_json glog::glog ${XROOTD_CLIENT_LIBRARIES} gflags::gflags ${ROOT_LIBRARIES})
