set(LINKDIR ${CMAKE_CURRENT_SOURCE_DIR}/LinkDefDir)
set(BASELINKFS ${CMAKE_CURRENT_SOURCE_DIR}/LShower.hh ${CMAKE_CURRENT_SOURCE_DIR}/LSimulationConfig.hh 
    ${CMAKE_CURRENT_SOURCE_DIR}/LTelConfig.hh ${CMAKE_CURRENT_SOURCE_DIR}/LSimulationConfig.hh)
set(TELRAWLINKFS ${CMAKE_CURRENT_SOURCE_DIR}/LTelTrueImage.hh ${CMAKE_CURRENT_SOURCE_DIR}/LTelElectronic.hh)
set(TELRAWSRCS ${CMAKE_CURRENT_SOURCE_DIR}/LTelTrueImage.cpp ${CMAKE_CURRENT_SOURCE_DIR}/LTelElectronic.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/LSimulationImage.cpp  ${CMAKE_CURRENT_SOURCE_DIR}/LEventElectronic.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/LEvent.cpp)
set(BASESRC ${CMAKE_CURRENT_SOURCE_DIR}/LDataBase.cpp ${CMAKE_CURRENT_SOURCE_DIR}/LJsonConfig.cpp 
     ${CMAKE_CURRENT_SOURCE_DIR}/LTelConfig.cpp )

#set(BASEDICTFILE ${CMAKE_CURRENT_BINARY_DIR}/LBASEDICT.cxx)
add_library(BASE STATIC)
target_sources(BASE PRIVATE ${BASESRC})
target_include_directories(BASE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${ROOT_INCLUDE_DIRS})
target_link_libraries(BASE PUBLIC  spdlog::spdlog_header_only gflags::gflags nlohmann_json::nlohmann_json  ${ROOT_LIBRARIES})
ROOT_GENERATE_DICTIONARY(BASEDICT ${BASELINKFS} MODULE BASE LINKDEF ${LINKDIR}/LBaseLinkDef.h)

add_subdirectory(LASTRAW)
add_subdirectory(LASTDL0)
add_subdirectory(LASTDL1)

ROOT_GENERATE_DICTIONARY(RAWDICT ${RAWHEADERFS} MODULE LASTRAW LINKDEF ${LINKDIR}/LRawLinkDef.h)
ROOT_GENERATE_DICTIONARY(DL0DICT ${DL0HEADERFS} MODULE LASTDL0 LINKDEF ${LINKDIR}/LDL0LinkDef.h)
ROOT_GENERATE_DICTIONARY(DL1DICT ${DL1HEADERFS} MODULE LASTDL1 LINKDEF ${LINKDIR}/LDL1LinkDef.h)


INSTALL(TARGETS BASE DESTINATION ${CMAKE_LIB_DIR})
INSTALL(FILES 
        ${CMAKE_CURRENT_BINARY_DIR}/libBASE_rdict.pcm 
        ${CMAKE_CURRENT_BINARY_DIR}/libLASTDL0_rdict.pcm
        ${CMAKE_CURRENT_BINARY_DIR}/libLASTRAW_rdict.pcm
        ${CMAKE_CURRENT_BINARY_DIR}/libLASTDL1_rdict.pcm
        DESTINATION ${CMAKE_BIN_DIR})
INSTALL(FILES
        ${CMAKE_CURRENT_BINARY_DIR}/libLASTDL1_rdict.pcm
        DESTINATION ${CMAKE_LIB_DIR})
